Tweak block switch tabs readability, fix for code blocks

--- a/assets/scss/hyde-hyde/_asciidoctor.scss
+++ b/assets/scss/hyde-hyde/_asciidoctor.scss
@@ -703,7 +703,6 @@ $blockquote-quote-shadow-color: rgba(0, 0, 0, 0.1) !default;
     }
   }
 
-
   .literalblock pre, .listingblock > .content > pre {
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -741,7 +740,8 @@ $blockquote-quote-shadow-color: rgba(0, 0, 0, 0.1) !default;
 
   .listingblock {
     > .content {
-      position: relative;
+      // removing relative position blockswitch tabs
+      //position: relative;
     }
 
     code[data-lang]::before {
